--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </h1>
         <div class="row mt-5 reveal">
             <div class="col-12 text-center">
-                <img src="/presentation/img/Untitled Diagram.drawio.png" alt="" class="undraw-img">
+                <img src="/presentation/img/Untitled Diagram.drawio.png" alt="" style="height: 500px;">
             </div>
         </div>
     </div>
