--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
             <div class="col-md-6">
                  <h2 class="text-center">3. DONT USE VERBS IN URLS</h2>
                 
-                <p class="p-5 text-justify fw-light">- . The reason behind this is that HTTP has to be self-sufficient to describe the purpose of the action. Let’s take an example when you want endpoint to produce a banner image for a post; you have to note the :param is a placeholder for a URI parameter. </p>
+                <p class="p-5 text-justify fw-light">- The reason behind this is that HTTP has to be self-sufficient
+                    to describe the purpose of the action. Let’s take an example when you want endpoint to produce a banner 
+                    image for a post; you have to note the :param is a placeholder for a URI parameter. 
+                </p>
             </div>
             <div class="col-md-6">
                 <img src="https://i.ytimg.com/vi/2g2bBK3ucRg/maxresdefault.jpg" alt="" class="img-fluid">
