--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>GROUP PRESENTATION | LEENTECH</title>
 </head>
 <body>
@@ -102,7 +102,7 @@
                 </ul>
             </div>
             <div class="col-md-5">
-                <img src="/presentation/img/undraw_terms_re_6ak4.svg" alt="" class="img-fluid">
+                <img src="/img/undraw_terms_re_6ak4.svg" alt="" class="img-fluid">
             </div>
         </div>
     </div>
@@ -112,8 +112,26 @@
             HOW DOES IT WORKS?
         </h1>
         <div class="row mt-5 reveal">
-            <div class="col-12 text-center">
-                <img src="/presentation/img/Untitled Diagram.drawio.png" alt="" style="height: 700px;">
+            <div class="col-12 text-center flip-card">
+               <div class="flip-card-inner">
+                   <div class="flip-card-front">
+                    <img src="/img/img-api.JPG" alt="" class="img-fluid">
+                   </div>
+                   <div class="flip-card-back text-justify mt-5 p-5">
+                    The key elements of the REST API paradigm are:
+                   <ul>
+                       <li>
+                        a client or software that runs on a user’s computer or smartphone and initiates communication;
+                       </li>
+                       <li>
+                        a server that offers an API as a means of access to its data or features;
+                       </li>
+                       <li>
+                        a resource, which is any piece of content that the server can provide to the client (for example, a video or a text file).
+                       </li>
+                   </ul>
+                   </div>
+               </div>
             </div>
         </div>
     </div>
@@ -157,10 +175,7 @@
             <div class="col-md-6">
                  <h2 class="text-center">3. DONT USE VERBS IN URLS</h2>
                 
-                <p class="p-5 text-justify fw-light">- The reason behind this is that HTTP has to be self-sufficient
-                    to describe the purpose of the action. Let’s take an example when you want endpoint to produce a banner 
-                    image for a post; you have to note the :param is a placeholder for a URI parameter. 
-                </p>
+                <p class="p-5 text-justify fw-light">- It is a common practice that APIs should accept JSON requests as the payload and also send responses back.</p>
             </div>
             <div class="col-md-6">
                 <img src="https://i.ytimg.com/vi/2g2bBK3ucRg/maxresdefault.jpg" alt="" class="img-fluid">
@@ -192,7 +207,7 @@
         <div class="row spacing gx-5 reveal">
            
             <div class="col-md-5">
-                <img src="/presentation/img/undraw_page_not_found_re_e9o6.svg" alt="" class="img-fluid">
+                <img src="/img/undraw_page_not_found_re_e9o6.svg" alt="" class="img-fluid">
             </div>
             <div class="col-md-7">
                 <h2 class="text-center">6. RETURN ERROR DETAILS IN THE RESPONSE BODY</h2>
@@ -208,7 +223,7 @@
                  <p class="p-5 text-justify fw-light">- Resource objectives are always related to one another or have some type of functional hierarchy. However, in the REST API, it is still best to keep nesting to one level, as too many nested levels can lose their beautiful charm.</p>
             </div>
             <div class="col-md-6">
-               <img src="/presentation/img/undraw_user_flow_re_bvfx.svg" alt="" class="img-fluid ">
+               <img src="/img/undraw_user_flow_re_bvfx.svg" alt="" class="img-fluid ">
             </div>
         </div>
         <div class="row spacing gx-5 reveal">
