--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="col-12 text-center flip-card">
                <div class="flip-card-inner">
                    <div class="flip-card-front">
-                    <img src="/img/img-api.JPG" alt="" class="img-fluid">
+                    <img src="img-api.JPG" alt="" class="img-fluid">
                    </div>
                    <div class="flip-card-back text-justify mt-5 p-5">
                     The key elements of the REST API paradigm are:
