--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>GROUP PRESENTATION | LEENTECH</title>
 </head>
 <body>
@@ -102,7 +102,7 @@
                 </ul>
             </div>
             <div class="col-md-5">
-                <img src="/img/undraw_terms_re_6ak4.svg" alt="" class="img-fluid">
+                <img src="/presentation/img/undraw_terms_re_6ak4.svg" alt="" class="img-fluid">
             </div>
         </div>
     </div>
@@ -207,7 +207,7 @@
         <div class="row spacing gx-5 reveal">
            
             <div class="col-md-5">
-                <img src="/img/undraw_page_not_found_re_e9o6.svg" alt="" class="img-fluid">
+                <img src="/presentation/img/undraw_page_not_found_re_e9o6.svg" alt="" class="img-fluid">
             </div>
             <div class="col-md-7">
                 <h2 class="text-center">6. RETURN ERROR DETAILS IN THE RESPONSE BODY</h2>
@@ -223,7 +223,7 @@
                  <p class="p-5 text-justify fw-light">- Resource objectives are always related to one another or have some type of functional hierarchy. However, in the REST API, it is still best to keep nesting to one level, as too many nested levels can lose their beautiful charm.</p>
             </div>
             <div class="col-md-6">
-               <img src="/img/undraw_user_flow_re_bvfx.svg" alt="" class="img-fluid ">
+               <img src="/presentation/img/undraw_user_flow_re_bvfx.svg" alt="" class="img-fluid ">
             </div>
         </div>
         <div class="row spacing gx-5 reveal">
